#################################################
#
#  (C) 2011 Golubev Alexander
#  fatzer2 (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

# cmake_minimum_required(VERSION 2.8)
# 
# set( ICONTHEMES Locolor ikons kdeclassic slick kids )
# 
# file( GLOB_RECURSE FILES RELATIVE Locolor "*.png" )
# foreach( cur_file ${FILES} )
#   install( FILES ${cur_file} DESTINATION ${CMAKE_INSTALL_PREFIX} )
# endforeach( cur_file in ${FILES} )

