#################################################
#
#  (C) 2011 Golubev Alexander
#  fatzer2 (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

add_subdirectory( BoxedEmoticonSet )
add_subdirectory( ccmathteam.com )
add_subdirectory( greggman.com )
add_subdirectory( GroupWise )
add_subdirectory( KMess )
add_subdirectory( KMess-Blue )
add_subdirectory( KMess-Cartoon )
add_subdirectory( KMess-Violet )
add_subdirectory( phpBB )
add_subdirectory( plain )
add_subdirectory( redones )
add_subdirectory( set1 )
