#################################################
#
#  (C) 2010 Serghei Amelian
#  serghei (DOT) amelian (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

add_subdirectory( alt )
add_subdirectory( bio )
add_subdirectory( caida )
add_subdirectory( caida_bw )
add_subdirectory( mggd )
add_subdirectory( rainfall )
