#################################################
#
#  (C) 2011 Golubev Alexander
#  fatzer2 (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

install( FILES
    KDE_Logout_new.wav
    KDE_Startup_new.wav
  DESTINATION ${SOUND_INSTALL_DIR} )
