#################################################
#
#  (C) 2011 Golubev Alexander
#  fatzer2 (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

install( FILES
    air.jpg air.jpg.desktop
    alien-night.jpg alien-night.jpg.desktop
    antique_chess.jpg antique_chess.jpg.desktop
    Appropriately-Left-Handed-2.jpg
    autumn_leaves.jpg autumn_leaves.jpg.desktop
    blue_angle_swirl.jpg
    bluegreencrisscross.jpg 
    crystal_fire.png crystal_fire.png.desktop
    curls_on_green.jpg curls_on_green.jpg.desktop
    damselfly.jpg damselfly.jpg.desktop
    ethais.png ethais.png.desktop
    fulmine.jpg fulmine.jpg.desktop
    gear-flowers.svgz gear-flowers.svgz.desktop
    gold_crinkle.jpg
    golden_dome.jpg golden_dome.jpg.desktop
    kore.png kore.png.desktop
    kraftwurm.jpg kraftwurm.jpg.desktop
    kubical.png kubical.png.desktop
    landscape_keltern.jpg landscape_keltern.jpg.desktop
    mystical_rightturn.jpg mystical_rightturn.jpg.desktop
    sepia_mountain.jpg sepia_mountain.jpg.desktop
    storm_blue.jpg storm_blue.jpg.desktop
    storm_green.jpg storm_green.jpg.desktop
    sunset_field.jpg sunset_field.jpg.desktop
    Superfluous-Organ-1.jpg
    the_bay.jpg the_bay.jpg.desktop
    The-Good-Times-1.jpg
    vegetative_fog.jpg
    Water01.jpg
  DESTINATION ${WALLPAPER_INSTALL_DIR} )
