
papers_DATA = \
     alien-night.jpg \
     kraftwurm.jpg \
     kubical.png \
     mystical_rightturn.jpg \
     Appropriately-Left-Handed-2.jpg \
     Superfluous-Organ-1.jpg \
     The-Good-Times-1.jpg \
     Water01.jpg \
     blue_angle_swirl.jpg \
     bluegreencrisscross.jpg \
     gold_crinkle.jpg \
     vegetative_fog.jpg \
     fulmine.jpg \
     fulmine.jpg.desktop \
     gear-flowers.svgz \
     gear-flowers.svgz.desktop \
	golden_dome.jpg \
	golden_dome.jpg.desktop \
	kore.png \
	kore.png.desktop \
	landscape_keltern.jpg \
	landscape_keltern.jpg.desktop \
	sepia_mountain.jpg \
	sepia_mountain.jpg.desktop \
	storm_blue.jpg \
	storm_blue.jpg.desktop \
	storm_green.jpg \
	storm_green.jpg.desktop \
	the_bay.jpg \
	the_bay.jpg.desktop \
	\
	air.jpg \
	air.jpg.desktop \
	antique_chess.jpg \
	antique_chess.jpg.desktop \
	autumn_leaves.jpg \
	autumn_leaves.jpg.desktop \
	curls_on_green.jpg \
	curls_on_green.jpg.desktop \
	damselfly.jpg \
	damselfly.jpg.desktop \
	ethais.png \
	ethais.png.desktop \
	sunset_field.jpg \
	sunset_field.jpg.desktop

papersdir = $(kde_wallpaperdir)

EXTRA_DIST = $(papers_DATA)
