#################################################
#
#  (C) 2011 Golubev Alexander
#  fatzer2 (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

install( FILES
	emoticons.xml
    biggrin.png cry.png oh.png sleep.png smile.png 
    tongue.png unhappy.png wink.png
  DESTINATION ${SHARE_INSTALL_PREFIX}/emoticons/tweakers.net )
