#################################################
#
#  (C) 2011 Golubev Alexander
#  fatzer2 (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

install( FILES
    1200.jpg
    200.jpg
    400.jpg
    800.jpg
    caida_bw.desktop
  DESTINATION "${DATA_INSTALL_DIR}/kworldclock/maps/caida_bw" )
